# vonNeumannOSG

./: CMakeLists.txt  CMakePresets.json  TODO  conanbuildinfo.cmake  conanfile.py  conanfile.txt
cmake/: conan_config.cmake
data/: drone.json  flat_scene.json  scene.json
docs/: sketchbook.txt
src/: CMakeLists.txt  ConfigCache.h  Entity.h  EntityBehavior.cpp  EntityBehavior.h  EntityCache.cpp  EntityCache.h  EntityConf.cpp  EntityConf.h  EntityUpdateCallback.cpp  SceneConfig.h  SimpleScene.cpp  Vec3dPid.h  Viewer.cpp
src/ChartViewer/: CMakeLists.txt  main.cpp
src/PyViewer/: pyviewer.py
src/SandBoxViewer/: CMakeLists.txt
src/SimpleViewer/: CMakeLists.txt  Entity.h  EntityBehavior.cpp  EntityBehavior.h  EntityConf.h  EntityUpdateCallback.cpp  KafkaLoggerBehavior.cpp  KafkaLoggerBehavior.h  SimpleScene.cpp  SimpleScene.h  Viewer.cpp
src/common/: Axis.h  AxisJson.h  CMakeLists.txt  DataLogger.cpp  DataLogger.h  FactoryRegistry.h  FlagSet.h  JsonConfigCache.h  MathHelpers.h  OsgMathExtensions.h  PluginBase.cpp  PluginBase.h  PluginManager.h  QuatPid.h  ScalarPid.h  StringTools.h  Vec3dPid.h  log.h  osgJsonSerializer.h
src/common_tests/: CMakeLists.txt  StringToolsTest.cpp
src/injectionTest/: CMakeLists.txt  main.cpp
src/interfaces/: BehaviorConf.h  CMakeLists.txt  Entities.h  Entity.cpp  Entity.h  EntityBehavior.cpp  EntityBehavior.h  EntityBehaviorPlugin.cpp  EntityBehaviorPlugin.h  EntityBehaviorRegistry.cpp  EntityBehaviorRegistry.h  EntityBehaviors.cpp  EntityBehaviors.h  EntityConf.h  EntityManager.cpp  EntityManager.h  EntityUpdateCallback.cpp  EntityUpdateCallback.h  FrameTime.h  GizmoConf.h  KafkaLoggerBehavior.cpp  KafkaLoggerBehavior.h  PositionAttitudeConf.h  Property.cpp  Property.h  SceneConfig.h  SceneMarker.h
src/kafkaTest/: CMakeLists.txt  main.cpp
src/plugins/: CMakeLists.txt
src/plugins/defaultLoaders/: CMakeLists.txt  LoaderPlugin.cpp  ReaderGizmo.cpp
src/plugins/defaultPids/: CMakeLists.txt  DefaultControllerPlugin.cpp  PositionController.cpp  PositionController.h  ReaderGizmo.cpp
src/plugins/defaultPids/controllers/goto/: GotoController.cpp  GotoController.h
src/plugins/defaultPids/controllers/orientation/: OrientationController.cpp  OrientationController.h
src/plugins/defaultPids/controllers/position/: PositionController.cpp  PositionController.h
src/plugins/defaultScenes/: CMakeLists.txt  Flatticator.cpp  Flatticator.h  SceneBehaviors.cpp  SceneBehaviors.h  SceneBehaviorsPlugin.cpp
