set(MODULE_NAME DefaultLoaders)
find_package(openscenegraph CONFIG REQUIRED)

file(GLOB_RECURSE PRIVATE_FILES	CONFIGURE_DEPENDS	*.*)

add_library(${MODULE_NAME} MODULE
	${PRIVATE_FILES}
)

target_link_libraries(${MODULE_NAME} PRIVATE
	PUBLIC
		OPENSCENEGRAPH::osg OPENSCENEGRAPH::osgDB
	PRIVATE
)

target_compile_features(${MODULE_NAME}
	PRIVATE
		cxx_std_23
)

set_target_properties(${MODULE_NAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
set_target_properties(${MODULE_NAME} PROPERTIES RELWITHDEBINFO_POSTFIX ${CMAKE_RELWITHDEBINFO_POSTFIX})


install(TARGETS ${MODULE_NAME}
	RUNTIME
		DESTINATION ${CMAKE_INSTALL_BINDIR}/plugins
		COMPONENT ${RUNTIME_COMPONENT}
	LIBRARY
		DESTINATION ${CMAKE_INSTALL_BINDIR}/plugins
		COMPONENT ${RUNTIME_COMPONENT}
	ARCHIVE
		DESTINATION ${CMAKE_INSTALL_ARCHIVEDIR}/plugins
		COMPONENT ${DEVELOP_COMPONENT}
)
#install_pdbs(TARGET ${MODULE_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR}/plugins)