set(MODULE_NAME DefaultPids)
find_package(OpenSceneGraph CONFIG REQUIRED)

file(GLOB_RECURSE PRIVATE_FILES	CONFIGURE_DEPENDS	*.*)

add_library(${MODULE_NAME} MODULE
	${PRIVATE_FILES}
)

target_link_libraries(${MODULE_NAME} PRIVATE
	PUBLIC
		${PROJECT_NAMESPACE}::common
		${PROJECT_NAMESPACE}::interfaces
	PRIVATE
		OPENSCENEGRAPH::osg OPENSCENEGRAPH::osgDB
)

target_compile_features(${MODULE_NAME}
	PRIVATE
		cxx_std_23
)

set_target_properties(${MODULE_NAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
set_target_properties(${MODULE_NAME} PROPERTIES RELWITHDEBINFO_POSTFIX ${CMAKE_RELWITHDEBINFO_POSTFIX})

install(TARGETS ${MODULE_NAME}
	RUNTIME
		DESTINATION ${CMAKE_INSTALL_BINDIR}/plugins
		COMPONENT ${RUNTIME_COMPONENT}
	LIBRARY
		DESTINATION ${CMAKE_INSTALL_BINDIR}/plugins
		COMPONENT ${RUNTIME_COMPONENT}
	ARCHIVE
		DESTINATION ${CMAKE_INSTALL_ARCHIVEDIR}/plugins
		COMPONENT ${DEVELOP_COMPONENT}
)
